; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/extr_crc32_clmul.c_have_clmul.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/extr_crc32_clmul.c_have_clmul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @have_clmul to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @have_clmul() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = call i32 @cpuid(i32 1, i32* %1, i32* %2, i32* %3, i32* %4)
  %8 = load i32, i32* %3, align 4
  %9 = and i32 %8, 2
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, 524288
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %0
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br label %17

17:                                               ; preds = %14, %0
  %18 = phi i1 [ false, %0 ], [ %16, %14 ]
  %19 = zext i1 %18 to i32
  ret i32 %19
}

declare dso_local i32 @cpuid(i32, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
